sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  lgr=getNombreValeurs()
  var i=0
  
  while (i!=lgr){
    for (i<- 0 to lgr-2){
      if (plusPetit(i+1,i)){
        echange(i,i+1)
        return
      }
    }
  }
}